resources/http-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: http
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
  selector:
    vm.kubevirt.io/name: fedora-1
