resources/ssh-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ssh
spec:
  ports:
    - protocol: TCP
      port: 22
      targetPort: 22
  type: LoadBalancer
  selector:
    vm.kubevirt.io/name: fedora-1
