resources/http-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpd-vm
  namespace: default
spec:
  to:
    kind: Service
    name: http
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
